# SimpleAuth

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  PENDING-CHANGES.md  README.md  build.md  build.sh  docker-build.sh  docker-compose.yml  go.mod  go.sum  main.go
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
branding/: BRAND_GUIDELINES.md  tokens.css
deploy/nginx/: Dockerfile  nginx.conf
docs/: ACTIVE-DIRECTORY.md  API.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT-GUIDE.md  KEYCLOAK-MIGRATION.md  QUICKSTART.md  REVERSE-PROXY.md  SDK-GUIDE.md
examples/go/: go.mod
examples/js/: basic-login.ts  express-api.ts  nextjs-auth.ts  service-to-service.ts
examples/python/: basic_login.py  django_views.py  fastapi_app.py  flask_app.py  service_client.py
internal/auth/: encrypt.go  jwt.go  ldap.go  local.go
internal/config/: config.go
internal/handler/: account.go  admin.go  admin_kerberos.go  admin_ldap.go  admin_linux_sso.go  admin_migration.go  admin_restart.go  admin_settings.go  auth.go  encrypt.key  handler.go  handler_test.go  hosted_login.go  middleware.go  oidc.go  secrets.go  session_sso.go
internal/store/: bolt.go  dbconfig.go  interface.go  migrate.go  open.go  postgres.go  store.go  store_test.go  types.go
pkg/server/: server.go
sdk/dotnet/: README.md  SimpleAuth.csproj  SimpleAuthClient.cs  SimpleAuthMiddleware.cs  SimpleAuthUser.cs
sdk/go/: README.md  go.mod  simpleauth.go
sdk/js/: README.md  index.ts  package.json
sdk/python/: README.md  pyproject.toml
ui/: embed.go
(+9 files in other folders)
