[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simpleauth"
version = "1.0.0"
description = "Python SDK for SimpleAuth — OIDC-compatible authentication server"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["simpleauth", "auth", "oidc", "oauth2", "jwt", "authentication"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28",
    "cryptography>=41.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100", "starlette>=0.27"]
flask = ["flask>=2.3"]
django = ["django>=4.2"]
dev = ["pytest", "pytest-asyncio", "httpx", "respx"]

[project.urls]
Homepage = "https://github.com/bodaay/simpleauth"
Repository = "https://github.com/bodaay/simpleauth"

[tool.setuptools.packages.find]
include = ["simpleauth*"]
